# LearningOpenGL

./: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/stb_image/: stb_image.h
resources/shaders/: shader.frag  shader.vert
src/: camera.h  main.cpp
src/Camera/: camera.h
src/Shader/: Shader.cpp  Shader.h
